added work with json files

--- a/FourWheels/Templates/cars-page.html
+++ b/FourWheels/Templates/cars-page.html
@@ -53,118 +53,7 @@
         <aside id="cars-filter">
         
         </aside> 
-        <div class="cards-grid">
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/car1.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes GLC 250</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">56.000€</p>
-            </div>
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/jaguar-xf-001.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Jaguar XF</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">37.000€</p>
-            </div>
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/bmw-7-001.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Bmw 7</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">48.000€</p>
-            </div>
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/mercedes-amg-001.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes amg</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">73.500€</p>
-            </div>
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/tesla-3-001.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Tesla model 3</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">21.250€</p>
-            </div> 
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/mercedes-e-001.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Mercedes E220</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">16.000€</p>
-            </div> 
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/wv-passat-001.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Wolksvagen passat</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">5.500€</p>
-            </div> 
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/suzuki-001.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Suzuki swift</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">13.000€</p>
-            </div> 
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/opel-astraj-001.jpg" alt="" class="card-img"></a>
-                <h3 class="card-title">Opel astra</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">7.000€</p>
-            </div> 
-            <div class="car-card">
-                <a href=""><img src="../Img/cars/wv-golf-001.png" alt="" class="card-img"></a>
-                <h3 class="card-title">Wolksvagen golf</h3>
-                <div class="card-details">
-                    <p>Year :</p>
-                    <p>Power :</p>
-                    <p>Fuel :</p>
-                    <p>Transmission: </p>
-                </div>
-                <p class="card-price">6.750€</p>
-            </div>     
-        </div>
+        <div class="cards-grid"></div>
     </section>
     <footer>
         <h2>4Wheels</h2>
@@ -178,8 +67,7 @@
         <img src="../Img/footer/address-map.png" alt="map">
     </footer>
 
+    <script src="../Scripts/car-cards.js"></script>
     <script src="../Scripts/script.js"></script>
-    <script src="../Scripts/search-bar.js"></script>
-    <script src="../Scripts/sort-menu.js"></script>
 </body>
 </html>
