--- a/FourWheels/Css/pages/auth-page.css
+++ b/FourWheels/Css/pages/auth-page.css
@@ -1,4 +1,5 @@
 #auth-reg-form {
+    position: relative;
     margin: 100px auto;
     width: 350px;
     background-color: black;
@@ -77,4 +78,18 @@ form {
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
     color: #a83931;
+}
+
+#sign-up {
+    position: absolute;
+    top: 75px;
+    left: 35px;
+}
+
+.hide {
+    display: none;
+}
+
+.activeLine {
+    background-color: red;
 }
